[gd_scene load_steps=14 format=3 uid="uid://c7ptu66x3wpxi"]

[ext_resource type="Script" uid="uid://dpo2lqw01hrdr" path="res://scripts/local_multiplayer.gd" id="1_ukc0w"]
[ext_resource type="Texture2D" uid="uid://b6v05xgyad8ir" path="res://assets/sprites/fondo1-con-bordes.png" id="1_yr7aq"]
[ext_resource type="PackedScene" uid="uid://ckirk23gwa5mm" path="res://scenes/player.tscn" id="2_a3agf"]
[ext_resource type="Texture2D" uid="uid://fbowbyxqkch" path="res://assets/sprites/valla4-recortada.png" id="4_moa44"]
[ext_resource type="PackedScene" uid="uid://0cg3joh34hra" path="res://scenes/player2.tscn" id="5_a3agf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(50, 930)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywne"]
size = Vector2(1920, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(1921, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(51, 242)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(10, 198)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gee14"]
size = Vector2(30, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tnpc"]
size = Vector2(16.99974, 533.22815)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukc0w"]
size = Vector2(1876, 118)

[node name="Local_multiplayer" type="Node2D"]
script = ExtResource("1_ukc0w")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_yr7aq")
centered = false

[node name="Player" parent="." instance=ExtResource("2_a3agf")]
position = Vector2(562, 903)

[node name="Border" type="StaticBody2D" parent="."]

[node name="Left_wall" type="CollisionShape2D" parent="Border"]
position = Vector2(-4, 465)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="Right_wall" type="CollisionShape2D" parent="Border"]
position = Vector2(1928, 465)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="Top" type="CollisionShape2D" parent="Border"]
position = Vector2(968, -13)
shape = SubResource("RectangleShape2D_iywne")

[node name="Floor" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="Floor" type="CollisionShape2D" parent="Floor"]
position = Vector2(961.5, 1005)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="Net" type="StaticBody2D" parent="."]
position = Vector2(389.00003, 369)
scale = Vector2(0.6, 0.6)
collision_layer = 3
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="Net"]
position = Vector2(966, 620)
texture = ExtResource("4_moa44")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net"]
position = Vector2(966.5, 809)
shape = SubResource("RectangleShape2D_p57ef")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Net"]
position = Vector2(966, 589)
shape = SubResource("RectangleShape2D_u5sy4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Net"]
position = Vector2(965.99994, 400)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_gee14")

[node name="Score_P1" type="Label" parent="."]
texture_filter = 1
offset_left = 102.0
offset_top = 114.0
offset_right = 145.0
offset_bottom = 217.0
theme_override_font_sizes/font_size = 75
text = "0"

[node name="Score_P2" type="Label" parent="."]
texture_filter = 1
offset_left = 1744.0
offset_top = 145.0
offset_right = 1787.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 75
text = "0"

[node name="Air_wall" type="StaticBody2D" parent="."]
position = Vector2(969.00006, 545)
rotation = -0.0062832204
collision_layer = 8
collision_mask = 8
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air_wall"]
position = Vector2(-0.5630493, -256.56393)
shape = SubResource("RectangleShape2D_0tnpc")

[node name="SpawnHost" type="Marker2D" parent="."]
position = Vector2(562, 903)

[node name="SpawnClient" type="Marker2D" parent="."]
position = Vector2(1373, 903)

[node name="Player2" parent="." instance=ExtResource("5_a3agf")]
position = Vector2(1374, 903)

[node name="Score_counter" type="Area2D" parent="."]
position = Vector2(0, 87)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score_counter"]
position = Vector2(961, 1008)
shape = SubResource("RectangleShape2D_ukc0w")

[connection signal="body_entered" from="Score_counter" to="." method="_on_score_counter_body_entered"]
